--- a/src/app/configuration/components/clubs-admin/clubs-admin.component.html
+++ b/src/app/configuration/components/clubs-admin/clubs-admin.component.html
@@ -1,9 +1,15 @@
 <div class="container py-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2 class="mb-0">Gestion des Commissions</h2>
-    <button (click)="handleDisplayForm()" class="btn btn-outline-success shadow-sm">
-      <i class="bi bi-plus-circle me-1"></i> Ajouter un Club
+    <h2 class="mb-0">Clubs</h2>
+    <button *ngIf="!displayForm; else closeButton" (click)="handleDisplayForm()"
+            class="btn btn-outline-success shadow-sm">
+      <i class="bi bi-plus-circle me-1"></i> Ajouter Une Clubs
     </button>
+    <ng-template #closeButton>
+      <button (click)="handleDisplayForm()" class="btn btn-outline-danger shadow-sm">
+        <i class="bi bi-x-circle me-1"></i> Annuler
+      </button>
+    </ng-template>
   </div>
   <div *ngIf="displayForm" class="card shadow mb-4">
     <div class="card-header bg-light">
@@ -21,7 +27,9 @@
         </div>
 
         <div class="d-flex justify-content-end">
-          <button type="submit" class="btn btn-outline-success px-4" [disabled]="clubForm.invalid">Enregistrer</button>
+          <button type="submit" class="btn btn-outline-success px-4" [disabled]="clubForm.invalid || !clubForm.dirty">
+            Enregistrer
+          </button>
         </div>
       </form>
     </div>
