--- a/src/app/member/components/registration/registration.component.html
+++ b/src/app/member/components/registration/registration.component.html
@@ -1,1 +1,71 @@
-<p>registration works!</p>
+<div class="container mt-2">
+  <form [formGroup]="reinscriptionForm" novalidate>
+    <div class="card mb-4">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="memberPhoneNumber" class="form-label">Membre</label>
+              <input id="memberPhoneNumber" placeholder="Saisir le numéro téléphone" formControlName="memberPhoneNumber"
+                     class="form-control"
+                     [ngClass]="{ 'is-invalid': reinscriptionForm.get('memberPhoneNumber')?.invalid && reinscriptionForm.get('memberPhoneNumber')?.touched }">
+              <div
+                *ngIf="reinscriptionForm.get('memberPhoneNumber')?.invalid && reinscriptionForm.get('memberPhoneNumber')?.touched"
+                class="invalid-feedback">
+                Veuillez sélectionner le numéro de téléphone du membre
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="session" class="form-label">Session</label>
+              <select id="session" formControlName="session" class="form-control"
+                      [ngClass]="{ 'is-invalid': reinscriptionForm.get('session')?.invalid && reinscriptionForm.get('session')?.touched }">
+                <option [value]="session.id">{{ session.session }}</option>
+              </select>
+              <div *ngIf="reinscriptionForm.get('session')?.invalid && reinscriptionForm.get('session')?.touched"
+                   class="invalid-feedback">
+                Veuillez sélectionner une session.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label class="form-label">Type de Réinscription</label>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" id="initial" value="INITIAL"
+                       formControlName="registrationType">
+                <label class="form-check-label" for="initial">Initiale</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" id="renewal" value="REINSCRIPTION"
+                       formControlName="registrationType">
+                <label class="form-check-label" for="renewal">Renouvellement</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label class="form-label">Statut du Paiement</label>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="statusPayment" formControlName="statusPayment">
+                <label class="form-check-label" for="statusPayment">Payé</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-end mt-4">
+      <button class="btn btn-outline-success" (click)="onSubmit()" [disabled]="reinscriptionForm.invalid">
+        <i class="bi bi-floppy2"></i> Enregistrer
+      </button>
+    </div>
+  </form>
+</div>
