--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,2 +1,11 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div class="app-container">
+  <div class="main-content">
+    <!-- Barre latérale -->
+    <app-aside-bare></app-aside-bare>
+
+    <!-- Contenu principal avec le routeur -->
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
